--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     background-color: #0D1117;
     display: flex;
-    align-items: center;
     justify-content: center;
     color: rgb(255, 255, 255);
     height: 100vh;
@@ -22,10 +21,11 @@ a {
 }
 
 #aboutMe {
-    position: relative;
+    position: absolute;
     font-size: 35px;
     color: #ffffff; 
     margin: 20px;
+    bottom: 420;
     padding: 5px 5px;
     border: 2px solid #30363D;
     border-radius: 5px;
