--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    background-color: #0D1117;
+    background: linear-gradient(180deg, #1e2244 0%, #000000 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,27 +14,42 @@ a {
     color: #2F81F7;
 }
 
+.background {
+    position: relative;
+    width: 50%;
+    min-width: 640px;
+    position: fixed;
+    border-radius: 50px;
+}
+
 .profileimage {
-    width: 300px;
-    height: 300px;
-    border: 5px solid #30363D;
+    position: relative;
+    width: 15%;
+    bottom: 10;
+    border: 5px solid #000000b0;
     border-radius: 50%;
 }
 
 #aboutMe {
-    font-size: 35px;
+    position: relative;
+    font-size: 20px;
+    font-family: 'Jetbrains Mono';src:local('src/fonts/JetBrainsMono-Bold.tff');
     color: #ffffff;
     margin-top: 20px;
     padding: 5px 10px;
-    border: 2px solid #30363D;
-    border-radius: 5px;
+    bottom: 20;
+    background-color: #000000b0;
+    border-radius: 50px;
 }
 
-#socials {
-    font-size: 25px;
+.social {
+    position: relative;
     color: #ffffff;
-    margin-top: 20px;
-    padding: 5px 10px;
-    border: 2px solid #30363D;
-    border-radius: 5px;
+    margin-top: 8px;
+    border-radius: 80px;
+}
+
+.social:hover {
+    border: 2px solid #ffffff;
+    margin-top: 4px;
 }
